--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ rustscan (1.0-1) stable; urgency=medium
 
   * Initial release.
 
- --  <>  Sat, 03 Jan 2026 16:33:46 +0000
+ -- theycallmeibra <ibrahimmammedov7@gmail.com>  Sat, 03 Jan 2026 16:39:23 +0000
